[gd_scene load_steps=7 format=3 uid="uid://3ioeiacajlks"]

[ext_resource type="Script" path="res://Scene/chest.gd" id="1_wyc3w"]
[ext_resource type="Texture2D" uid="uid://bhf4a6s5oqy24" path="res://Sprites/chestc.png" id="2_nk67b"]
[ext_resource type="Resource" uid="uid://c1pu2p0tak2m7" path="res://inv/chestinv.tres" id="2_wttp0"]
[ext_resource type="Script" path="res://Scene/open.gd" id="4_ts80s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okj4f"]
size = Vector2(60, 63)

[sub_resource type="CircleShape2D" id="CircleShape2D_m4rh2"]
radius = 123.077

[node name="StaticBody2D" type="StaticBody2D"]
scale = Vector2(0.65, 0.65)
script = ExtResource("1_wyc3w")
inv = ExtResource("2_wttp0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_okj4f")

[node name="Area2D" type="Area2D" parent="."]

[node name="Chestc" type="Sprite2D" parent="Area2D"]
texture_filter = 3
scale = Vector2(2, 2)
texture = ExtResource("2_nk67b")

[node name="ineraction" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_m4rh2")

[node name="locked" type="Label" parent="."]
offset_left = -66.1538
offset_top = -89.2308
offset_right = 2682.85
offset_bottom = 872.769
scale = Vector2(0.05, 0.05)
theme_override_colors/font_color = Color(0.854902, 0, 0, 1)
theme_override_font_sizes/font_size = 706
text = "LOCKED"

[node name="unlocked" type="Label" parent="."]
offset_left = -92.3077
offset_top = -89.2308
offset_right = 3928.69
offset_bottom = 872.769
scale = Vector2(0.05, 0.05)
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 706
text = "UNLOCKED!"

[node name="impossible" type="Label" parent="."]
offset_left = -300.0
offset_top = -141.538
offset_right = 12048.0
offset_bottom = 739.462
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 646
text = "You don't have a key to open this chest!"

[node name="open" type="Label" parent="."]
visible = false
offset_left = -136.923
offset_top = -95.3846
offset_right = 12211.1
offset_bottom = 785.615
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 646
text = "Press [E] to open."
script = ExtResource("4_ts80s")

[connection signal="sts" from="." to="open" method="_on_static_body_2d_sts"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D" to="open" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_exited" from="Area2D" to="open" method="_on_area_2d_body_exited"]
[connection signal="body_shape_entered" from="Area2D" to="open" method="_on_area_2d_body_shape_entered"]
